--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "devDependencies": {
         "@babel/core": "^7.24.7",
         "@babel/preset-env": "^7.24.7",
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.6.4",
         "babel-loader": "^9.1.3",
         "laravel-mix": "^6.0.49",
+        "postcss": "^8.4.31",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.77.6",
-        "sass-loader": "^12.1.0"
+        "sass-loader": "^12.1.0",
+        "tailwindcss": "^3.1.0"
     }
 }
