--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/style.css": "/style.css"
+    "/js/app.js": "/js/app.js?id=4f9b6efaae4d63b5da4705a029b4e5ba",
+    "/style.css": "/style.css?id=b37fd54cd11676126edfba9c56fd925d"
 }
