--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "build": "mix --production"
     },
     "devDependencies": {
+        "@babel/plugin-transform-modules-commonjs": "^7.24.8",
         "@babel/preset-env": "^7.24.8",
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
