29 July 2024: -setup migration & seeder for posts -backup database with new set of randomly generated data -Post Announcement Module [COMPLETE] -next: Anonymous Feedback Module

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Http/Helpers/helper_list_roster.php"
+            "app/Http/Helpers/helper_list_roster.php",
+            "app/Http/Helpers/downloadImage.php"
         ]
     },
     "autoload-dev": {
