--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,15 @@
     "require": {
         "php": "^8.2",
         "ezyang/htmlpurifier": "^4.17",
+        "google/recaptcha": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "phpmailer/phpmailer": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "friendsofphp/php-cs-fixer": "^3.62",
         "laravel/breeze": "^2.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
