31 August 2024: -add new webpages to segregate between admins & non-admins. -WIP: fix/improve current modules -next: role access

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         },
         "files": [
             "app/Http/Helpers/helper_list_roster.php",
-            "app/Http/Helpers/downloadImage.php"
+            "app/Http/Helpers/downloadImage.php",
+            "app/Http/Helpers/roleHelper.php"
         ]
     },
     "autoload-dev": {
